non-msrv-tests/tests/ui/item_option.stderr
error: `Debug` doesn't support any options
 --> tests/ui/item_option.rs:2:16
  |
2 | #[derive_where(Debug(option); T)]
  |                ^^^^^^^^^^^^^
